# auv_stack

auv_bringup/launch/: full_system.launch.py
auv_control/: package.xml  setup.py
auv_control/auv_control/: control_node.py
auv_control/launch/: control.launch.py
auv_hardware/auv_hardware/: bar30_node.py  camera_bottom_node.py  serial_thruster_driver.py
auv_hardware/launch/: hardware.launch.py
auv_interfaces/: CMakeLists.txt
auv_interfaces/msg/: YoloDetection.msg
auv_mission/: package.xml  setup.py
auv_mission/auv_mission/: mission_manager_node.py
auv_mission/launch/: mission.launch.py
auv_perception/: package.xml  setup.cfg  setup.py
auv_perception/auv_perception/: aruco_detector_node.py
auv_perception/config/: yolo.yaml
auv_state_estimation/: setup.py
auv_state_estimation/auv_state_estimation/: ekf_node.py
auv_state_estimation/config/: ekf.yaml
auv_state_estimation/launch/: ekf.launch.py
src/auv_bringup/: package.xml  setup.py
src/auv_bt/: package.xml  setup.cfg  setup.py
src/auv_bt/auv_bt/: blackboard.py  bt.py
src/auv_bt/launch/: bt.launch.py
src/auv_bt/trees/: bt.xml
src/auv_control/: setup.cfg
src/auv_control/auv_control/: thruster_mixer_node.py
src/auv_control/config/: controller.yaml
src/auv_hardware/: package.xml  setup.py
src/auv_hardware/auv_hardware/: bar30_node.py  camera_front_node.py  vectornav_node.py
src/auv_interfaces/: package.xml
src/auv_interfaces/msg/: AruCoDetection.msg  ThrusterCommand.msg
src/auv_mission/: setup.cfg
src/auv_state_estimation/: package.xml  setup.cfg
(+16 files in other folders)
