<?xml version="1.0"?>
<package format="3">
  <name>auv_interfaces</name>
  <version>0.0.1</version>
  <description>AUV custom message definitions</description>

  <maintainer email="you@example.com">Suyash</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- REQUIRED FOR ROS2 INTERFACE PACKAGES -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>